--- a/client/frontend/public/manifest.json
+++ b/client/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "dMeet",
-  "name": "dMeet: Web3 Meetings & Streaming",
+  "short_name": "tonMeet",
+  "name": "tonMeet: Web3 Meetings & Streaming",
   "icons": [
     {
       "src": "icon.png",
