--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@chakra-ui/react": "^1.8.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tonconnect/sdk": "^2.0.7",
     "big.js": "^6.2.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.7",
@@ -34,7 +35,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "ton": "^13.4.1",
+    "ton-core": ">=0.48.0",
+    "ton-crypto": ">=3.2.0",
+    "tonweb": "^0.0.60"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
