--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "^11.10.5",
     "@tonconnect/sdk": "^2.0.7",
     "big.js": "^6.2.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.7",
     "mobx": "^6.7.0",
@@ -36,10 +37,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "regenerator-runtime": "^0.13.9",
-    "ton": "^13.4.1",
-    "ton-core": ">=0.48.0",
-    "ton-crypto": ">=3.2.0",
-    "tonweb": "^0.0.60"
+    "ton": "13.3.0",
+    "ton-core": "^0.46.0",
+    "ton-crypto": "^3.2.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
